Changed visual and added news

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ layout: base
         <h2 class="u-type-h4 u-mt0">
             News/Announcement
           </h2>
-<p class="u-type-h5">News from college and around the world. For earlier news, <a href="{{ '/news-and-announcements/' | prepend: site.baseurl }}">click here</a>.</p>
+<p class="u-type-h5">News from college and around the world. </p>
 
       <div class="o-row u-flex-wrap">
 
@@ -130,6 +130,7 @@ layout: base
 
 
                                       </div>
+                                      <p class="u-type-h5">For earlier announcements, <a href="{{ '/news-and-announcements/' | prepend: site.baseurl }}">click here</a>.</p>
 
             </div>
   
