--- a/hackathon_register.html
+++ b/hackathon_register.html
@@ -25,7 +25,7 @@ permalink: /hackathon-at-next/registration/
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="{{ '/assets/images/hackathon.PNG' | prepend: site.baseurl }}" class="u-responsive" alt="Call for Hackathon" />
+              <img src="{{ '/assets/images/events/hackathon.png' | prepend: site.baseurl }}" class="u-responsive" alt="Call for Hackathon" />
             </div>
           </div>
         
