--- a/logicbattle_registration.html
+++ b/logicbattle_registration.html
@@ -25,7 +25,7 @@ permalink: /logic-battle-at-next/registration/
         
           <div class="u-ratio" style="padding-bottom: calc((711/1067)*100%);">
             <div class="c-aspect-inner">
-              <img src="{{ '/assets/images/events/Logic_battle.PNG' | prepend: site.baseurl }}" class="u-responsive" alt="Logic Battle" />
+              <img src="https://images.unsplash.com/photo-1556075798-4825dfaaf498?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=900&h=600" class="u-responsive" alt="Logic Battle" />
             </div>
           </div>
         
