Updated Prize Details

--- a/logicbattle.html
+++ b/logicbattle.html
@@ -53,8 +53,11 @@ Show your logical and programming command.  </p>
         <p>Date: July 19, 2019 (Second day of NEXT) <br />Time: 10:00 AM</p>
 <br />
         <h2 class="u-type-h4">Prizes and a Certificates</h2>
-        <p><strong>First Prize</strong>: NPR 9,000 and a Certificate<br /><strong>Second Prize</strong>: NPR 4,500 and a Certificate<br />
+        <p><strong>First Prize</strong>: NPR 9,000 + $100 credit of Amazon Web Services (AWS) + Certificate<br /><strong>Second Prize</strong>: NPR 4,500 and a Certificate<br />
         Certificate of appreciation for 2nd and 3rd runner up.</p>
+
+        <p><strong>$75 credit of AWS will be given to all the participants.</strong></p>
+
 <br />
         <h2 class="u-type-h4">Rules and Regulations</h2>
 
