--- a/project_exhibition.html
+++ b/project_exhibition.html
@@ -48,15 +48,16 @@ Show your project at NEXT 2019.</p>
         <h2 class="u-type-h4">Awards and Recognition</h2>
             <p>Winning team of any category will be awarded with following cash prize:</p>
                 <ul>
-                <li><strong>First prize</strong>:  NPR 8,000</li>
+                <li><strong>First prize</strong>:  NPR 8,000 + $100 credit of Amazon Web Services (AWS)</li>
                 <li><strong>Second prize</strong>: NPR 5,000</li>
                 
             <li><strong>Young and innovative idea (+2 level students)</strong>: NPR 5,000</li>
-            <li><strong>People Choice Award</strong>: NPR 5000</li>
+            <li><strong>People Choice Award</strong>: NPR 5,000</li>
                 </ul>
-            <p>All the participants will be awarded with a certificate of participation.</p>
             <p>The winning team will be awarded with trophy as well as medals for all the team members.</p>
-<br />
+            <p><strong>Certificate of Appreciation + $75 credit of AWS will be given to all the participants.</strong></p>
+
+            <br />
         <h2 class="u-type-h4">Team Specification</h2>
         <p>A team may consist of maximum of four members. (For Civil, Minimum: 4; Maximum: 6)</p>
         <p>Students from engineering and IT background can only participate in the exhibition.</p>
@@ -76,7 +77,7 @@ Show your project at NEXT 2019.</p>
 
         </ul>
 
-
+<br />
 
 <h2 class="u-type-h4">Deadline</h2>
 
@@ -89,10 +90,10 @@ Show your project at NEXT 2019.</p>
       <p><strong>Pradip Thapa</strong>
       <br/><a href="tel:+977 9845956861">+977 9845956861</a><br />
 
-      <p><strong>Roshan Moktan</strong>
+<strong>Roshan Moktan</strong>
       <br/><a href="tel:+977 9860165381">+977 9860165381</a><br />
 
-
+</p>
       <br />
       <a class="c-button c-button--outbound" href="{{ '/project-exhibition-at-next/registration/' | prepend: site.baseurl}}" target="_blank">Register a Project</a>
         
