Adds Robo Racing and Robo Football on Schedule

--- a/schedule.html
+++ b/schedule.html
@@ -76,6 +76,7 @@ permalink: /schedule/
                                        <p class="schedule-slot-desc"> 11:00AM - 3:45PM Seminars</p>
                                        <p class="schedule-slot-desc">11:00AM - 2:00PM Programming Competition</p>
                                        <p class="schedule-slot-desc">1:45PM - 2:15PM Alumni interaction   </p>
+                                       <p class="schedule-slot-desc">Robo Racing</p>
                                     </div>
                                     <!--Info content end -->
                                  </div>
@@ -100,6 +101,7 @@ permalink: /schedule/
                                        <p class="schedule-slot-desc">10:45AM - 3:00PM Tech-talks</p>
                                        <p class="schedule-slot-desc"> 11:00AM - 3:45PM Seminars</p>
                                        <p class="schedule-slot-desc">11:00AM - 2:00PM Rapid Coding Tournament</p>
+                                       <p class="schedule-slot-desc">Robo Football</p>
                                        
                                     </div>
                                     <!--Info content end -->
