--- a/robo_racing.html
+++ b/robo_racing.html
@@ -88,6 +88,7 @@ permalink: /robo-racing-at-next/
             <p>Any changes in the rules during the gameplay will be pre-informed to the participants.</p>
             <p>Participants should not argue with other participants. If there is any problem then participants should contact the organizing committee.</p>
             <p>Participants should build their own robots by themselves. Ready-made toys are not allowed.</p>
+            <p>Robots must be wirelessly connected.</p>
         </ul>
 
         <h2 class="u-type-h4">Prizes and Certifications</h2>
