--- a/robo_soccer.html
+++ b/robo_soccer.html
@@ -93,6 +93,7 @@ permalink: /robo-football-at-next/
             <p>Referee decision will be the final decision.</p>
             <p>Robot causing physical damage to the opponent robot will be immediately disqualified.</p>
             <p>Participants should build their own robots by themselves. The ready-made toy is not allowed.</p>
+            <p>Robots must be wirelessly connected.</p>
             
         </ul>
 
