Changes homepage video

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@ layout: base
         <div class="o-bg t-light o-row o-row--stacked u-no-wrap">
           <div class="o-three-quarter u-sixteen-nine">
             <div class="c-aspect-inner">
-              <iframe id="ytplayer" type="text/html" width="100%" height="100%" src="https://www.youtube.com/embed/3vPCpQTJkYo?Version=3&autoplay=1&controls=0&mute=1&loop=1&modestbranding=1&playlist=3vPCpQTJkYo" frameborder="0" allowfullscreen></iframe>
+              <iframe id="ytplayer" type="text/html" width="100%" height="100%" src="https://www.youtube.com/embed/7HfBsUXnUr4?Version=3&autoplay=1&controls=0&mute=1&loop=1&modestbranding=1&playlist=3vPCpQTJkYo" frameborder="0" allowfullscreen></iframe>
             </div>
           </div>
           <div class="o-half o-half--padded o-half--hero-stacked">
