Adds details for hackathon

--- a/hackathon.html
+++ b/hackathon.html
@@ -32,6 +32,14 @@ Innovative solutions to real-world problems. </p>
       </div>
     </div>
     <div class="o-text-column u-mb5">
+      <p>
+      Hackathon in NEXT is an event, that lasts for 3 days in which different individuals from technical or non-technical background work together. It encourages the creativity of student and supports collaboration among them to come up with a product in a short time frame using tools and techniques that they are familiar with. 
+      
+      </p>
+      
+      <p>It comprises of group of individuals (max 4) working together to get a minimal viable product in given theme. Themes will be provided to participant 3 days before the event through e-mail. The actual event will start from 8 am ( 2nd of Shrawan) and will end at 5 pm for 2 days (2nd  and 3rd  of shrawan) and in the third day( 4th of shrawan) from 7:30 am till 12:30pm and price will be distributed in the closing ceremony thereafter.
+
+      </p>
         <h2 class="u-type-h4">Hackathon Format</h2>
         <p>NEXT hackathon is scheduled into 3 days as follows:</p>
 
