Adds updated youtube video link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@ layout: base
           </div>
           <div class="o-half o-half--padded o-half--hero-stacked">
             <p class="editable u-type-panel-text u-m0">
-              Witness the fusion of creativity, imagination, and innovation. <br /><a href="https://www.youtube.com/watch?v=3vPCpQTJkYo" class="c-link c-link--outbound u-type-panel-text u-m0">Watch on YouTube</a>
+              Witness the fusion of creativity, imagination, and innovation. <br /><a href="https://youtu.be/7HfBsUXnUr4" class="c-link c-link--outbound u-type-panel-text u-m0">Watch on YouTube</a>
             </p>
           </div>
         </div>
