Rewritten Vintage Games

--- a/games.html
+++ b/games.html
@@ -77,21 +77,21 @@ permalink: /games/
                   <h2 class="u-type-h4">Vintage Games</h2>
                     <p>The following vintage games are available:</p>
                 <div class="c-ribbon">
-      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">ROADRASH</a>
+      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Roadrash</a>
                       </h3>
-                      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">NEED FOR SPEED 2000</a>
+                      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Need For Speed 2000</a>
                       </h3>
-                      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">MARIO</a>
+                      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Mario</a>
                       </h3>
-                      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">METALSLUG</a> 
+                      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Metalslug</a> 
                       </h3> 
-                      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">MINICLIPS GAMES</a> 
+                      <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Miniclip Games</a> 
                                 </h3>
 
-                                <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">TEKKEN</a> 
+                                <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Tekken</a> 
                                 </h3>
 
-                                <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">STREET FIGHTER(PLAYSTATION)</a> 
+                                <h3 class="c-ribbon__text" ><a class="c-link" target="_blank" rel="noreferrer noopener" href="#">Street Fighter</a> 
                                 </h3>
 
                               </div>
