Removed (at) for @

--- a/code-of-conduct.html
+++ b/code-of-conduct.html
@@ -47,7 +47,7 @@ permalink: /code-of-conduct/
 
 <p>If you are being harassed, notice that someone else is being harassed, or have any other concerns, please contact the organizer by using the contact information below immediately. Also, you may approach event staffs directly as they can be identified because they'll be wearing branded clothing and/or badges.</p>
 
-<p>Events Team Contact Information<br />For all incidents please alert:<br /><a href="mailto:next@ncit.edu.np">next (at) ncit.edu.np</a></p>
+<p>Events Team Contact Information<br />For all incidents please alert:<br /><a href="mailto:next@ncit.edu.np">next@ncit.edu.np</a></p>
 
 
 
