Added Broadway InfoSys to Main Sponsors

--- a/index.html
+++ b/index.html
@@ -86,7 +86,6 @@ layout: base
                     <a href="https://goo.gl/maps/Mcp9fDzA4u9BTQNa6" rel="noreferrer noopener" target="_blank" class="c-link c-link--outbound u-type-panel-text">Directions</a>
                 </div>
             </div>
-        </div>
     </div>
 </div>
 <div class="t-light">
@@ -155,5 +154,19 @@ layout: base
           </h3>
         </div>
       </div>
+      <div class="o-full">
+          <h2 class="u-type-h3">
+            Main Sponsors
+          </h2>
+        </div>
+      <div class="sponsors">
+          <ul aria-labelledby="sponsor-list-0" class="sponsor-list">
+             <li>
+                <a href="https://broadwayinfosys.com/" class="image-link sponsor-link--broadway" target="_blank" aria-label="Broadway InfoSys">
+                  <img src="{{ '/assets/images/sponsors/broadway.png' | prepend: site.baseurl}}">
+               </a>
+              </li>
+          </ul>            
+  </div>
     </div>
   </div>
