Corrects typo on gaming description

--- a/games.html
+++ b/games.html
@@ -35,7 +35,7 @@ permalink: /games/
     
           <div class="o-text-column u-mb5 u-mt5">
               <p>
-              With ever rise in technology, there is evolution of gaming. Gaming the heart of attraction in every technical event and there is no doubt that NEXT will not live up to its expectation.
+              With ever rise in technology, there is evolution of gaming. Gaming is the heart of attraction in every technical event and there is no doubt that NEXT will not live up to its expectation.
               </p>
               <br/>
               <h2 class="u-type-h4">Technical Games</h2>
