updates project exhibition registration

--- a/project_exhibition_registration.html
+++ b/project_exhibition_registration.html
@@ -58,6 +58,11 @@ permalink: /project-exhibition-at-next/registration/
             <input type="text" class="c-form__input" required placeholder="Project Name"
             name="entry.369857259" >
             <br /><br />
+<label class="c-form__label">College Name</label> 
+            <input type="text" class="c-form__input" required placeholder="College Name"
+            name="entry.462949857" >
+            <br /><br />
+
 
 <h3 class="u-type-h4">Team Details</h3>
 
