--- a/logicbattle.html
+++ b/logicbattle.html
@@ -86,6 +86,11 @@ Show your logical and programming command.  </p>
       <p><strong>Nischal Lal Shrestha </strong>
       <br/><a href="+977 9866253930">+977 9866253930</a><br />
            <a href="mailto:namaste@nischal.info.np">namaste@nischal.info.np</a></p>
+        
+        
+       <p><strong>Poshan Pandey</strong>
+      <br/><a href="+977 9860003427">+977 9860003427</a><br />
+           <a href="mailto:poshan0126@gmail.com">poshan0126@gmail.com</a></p>       
 
            <br />      
       <a class="c-button c-button--outbound" href="{{ '/logic-battle-at-next/registration/' | prepend: site.baseurl}}" target="_blank">Register for Logic Battle</a>
