Fixes logo not displaying temporarily

--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@ layout: base
           <ul aria-labelledby="sponsor-list-0" class="sponsor-list">
              <li>
                 <a href="https://broadwayinfosys.com/" class="image-link sponsor-link--broadway" target="_blank" aria-label="Broadway InfoSys">
-                  <img src="{{ '/assets/images/sponsors/broadway.png' | prepend: site.baseurl}}">
+                  <img src="https://broadwayinfosys.com/uploads/logo/1560604860.Broadway%20logo_website.png">
                </a>
               </li>
           </ul>            
