Updates robo racing details

--- a/robo_racing.html
+++ b/robo_racing.html
@@ -47,7 +47,6 @@ permalink: /robo-racing-at-next/
          <h2 class="u-type-h4">Team Specification</h2>
         <ul>
             <p>A team may consist of a maximum of 4 members.</p>
-            <p>Single person can also take participation.</p>
             <p>The participants can be from the same or different institute.</p>
         </ul>
 
@@ -61,19 +60,19 @@ permalink: /robo-racing-at-next/
                 <li>Speed Breakers</li>
                 <li>Water Cannel/Path</li>
                 <li>Elevation</li>
-                <li>Sand and Gravels</li>
-                <li>Small Transparent Tunnel</li>
+                <li>Sand and Pebbles</li>
+                <li>Short Tunnel</li>
                 <li>Muddy Soil</li>
             </ul>
             <p>The obstacle will be placed at any position/any distance throughout the track.</p>
-            <p>Two parallel track of the same model will be provided.</p>
+          
         </ul>
 
          <h2 class="u-type-h4">Gameplay</h2>
         <ul>
             <p>All the participants’ team will be divided into pair and race is started.</p>
             <p>Each round will be of 5 minute and 15 min break will be given to start another race.</p>
-            <p>The players cannot skip the obstacles and move/jump to the opponent track or out of the track if so happen he/she will be disqualified for race.</p>
+            <p>The players cannot skip the obstacles, if so happen he/she will be disqualified for race.</p>
             <p>If the robot stops in the track for more than one minute, it will be eliminated.</p>
             <p> The team which reaches the end/ target point first he/she will be qualified for the next round.</p>
             <p>After the game has started player cannot reset/ reprogrammed the robot until the time off.</p>
