Update robo soccer details

--- a/robo_soccer.html
+++ b/robo_soccer.html
@@ -73,7 +73,7 @@ permalink: /robo-football-at-next/
         <ul>
             <p>Each match will be of 6 minutes divided into 2 halves of 3 minutes each.</p>
             <p>Half time will be of 5 minutes for teams to repair any damage inflicted upon them.</p>
-
+            <p>The game will follow the general rule of football by adding 3 minutes of extra time. If the draw continues, the game will be decided by penalty shootout. </p>
 
         </ul>
 
