Adds addition field-College in csgo registrations

--- a/counterstrike_registration.html
+++ b/counterstrike_registration.html
@@ -44,6 +44,10 @@ permalink: /counterstrike-at-next/registration/
                     <label class="c-form__label">Team Captain Name</label> 
                     <input type="text" class="c-form__input" required placeholder="John Shah" name="entry.1069109300">
                     <br /><br />
+
+                    <label class="c-form__label">College your team represents</label>
+                    <input type="text" required class="c-form__input" placeholder="NCIT" name="entry.950304302">
+                      <br /><br />
         
         
                     <label class="c-form__label">Phone of Team Captain</label>
