Adds images and details for registration

--- a/dota_registration.html
+++ b/dota_registration.html
@@ -38,7 +38,7 @@ permalink: /dota-at-next/registration/
             <p>Before you proceed, make sure you've read the instructions. If you haven't read it yet, <a href="{{ '/dota-at-next/' | prepend: site.baseurl}}">click here.</a></p>
       
             <div class="c-form">
-                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/thank-you/';}"></iframe>
+                    <iframe name="hidden_iframe" id="hidden_iframe" style="display:none;" onload="if(submitted)  {window.location='/thank-you-dota/';}"></iframe>
                     <form action="https://docs.google.com/forms/d/1tsr0iQhBDFWkJ8zQKEpBU2LzGYpOJ552qXgXdsSNONs/formResponse" target="hidden_iframe" method="POST" onsubmit="submitted=true;">
         <h3 class="u-type-h4">Team Information</h3>
         
