--- a/thank-you-dota.html
+++ b/thank-you-dota.html
@@ -10,7 +10,7 @@ permalink: /thank-you-dota/
 
             <h2 class="u-type-hero-subline u-mt1 u-ptp5 editable">
             
-              Also Please Register at WASD Arena<a href="https://wasdarena.com/tournament/NEXT%20DOTA2%20Tournament" class="c-button c-button--margin c-button--gradient u-type-menu-text"> Register </a>
+              Also Please Register at WASD Arena<br/><a href="https://wasdarena.com/tournament/NEXT%20DOTA2%20Tournament" class="c-button c-button--margin c-button--gradient u-type-menu-text"> Register </a>
             </h2>
           </div>
         </div>
