--- a/hackathon.html
+++ b/hackathon.html
@@ -101,3 +101,27 @@ Innovative solutions to real-world problems. </p>
     </div>
   </div>
 </div>
+
+<div class="o-full">
+          <h2 class="u-type-h3">
+            Special Partner
+          </h2>
+        </div>
+      <div class="sponsors">
+          <ul aria-labelledby="sponsor-list-0" class="sponsor-list">
+
+
+
+
+              <li>
+                <a href="https://www.askbuddie.com/" class="image-link sponsor-link--broadway" target="_blank" aria-label="Ask Buddie">
+                  <img src="https://i.ibb.co/YkZctqf/ask.png">
+               </a>
+              </li>
+
+
+
+              
+              
+          </ul>            
+  </div>
