update racing details

--- a/robo_racing.html
+++ b/robo_racing.html
@@ -63,6 +63,8 @@ permalink: /robo-racing-at-next/
                 <li>Sand and Pebbles</li>
                 <li>Short Tunnel</li>
                 <li>Muddy Soil</li>
+                <li>Ladders</li>
+                <li>Grease</li>
             </ul>
             <p>The obstacle will be placed at any position/any distance throughout the track.</p>
           
