Comment our registration form for NEXT Seminars

--- a/session.html
+++ b/session.html
@@ -95,7 +95,9 @@ permalink: /session/
             20 July, Saturday 11:00 to 11:45AM</li>
 
         </ul>
-         <a href="https://docs.google.com/forms/d/e/1FAIpQLSceCbuQbJJlaDOWdSdp5x8dwRxQ4ZmQtyWA-98JIU1SfppLwg/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend NEXT Seminars</a>
+        <!--         <a href="https://docs.google.com/forms/d/e/1FAIpQLSceCbuQbJJlaDOWdSdp5x8dwRxQ4ZmQtyWA-98JIU1SfppLwg/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend NEXT Seminars</a>
+        -->
+
 
 </div>
 
