Removes old google form links and add div to day3

--- a/session.html
+++ b/session.html
@@ -151,7 +151,7 @@ permalink: /session/
             Swantina Shakya(Product Manager)<br/>
             Ambika Adhikari(Senior Software Engineer)<br/>
             </li>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSee7cvsJiM2RMB32MRFT2CNVXfgxP__qvKXkjdEYrw4DMDddQ/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend</a>
+
             <br/>
             <br/>
 
@@ -162,7 +162,7 @@ permalink: /session/
             <strong>Speaker</strong><br/>
             Manish Deula<br/>
             </li>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLScjNh7N0WlnmGTgZOschJV5gc-pF7d1_xBT7MCC2nQzUc-_bw/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend</a>
+
             <br/>
             <br/>
 
@@ -173,7 +173,7 @@ permalink: /session/
             Prasanna Dhungel<br/>
             GrowByData's Managing Partner<br/>
             </li>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf_B4qLd6l2_lCfpIRgwS8aGb6Devbl0wMxXZDp9gHFcc9aiA/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend</a>
+
             <br/>
             <br/>
 
@@ -184,7 +184,7 @@ permalink: /session/
             <strong>Speaker</strong><br/>
             Kumar Pudasaini<br/>
             </li>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdFyuBLve5vQ0sh0CIZgt5wc2pqGgy2xVZ2uuGl5cr2bRO84A/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend</a>
+
             <br/>
             <br/>
 
@@ -197,14 +197,14 @@ permalink: /session/
             Board Member of Nepal Block Chain Society<br/>
             
             </li>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSeiLEHDl0XpGZrnjIoTh4SkH78GyyeEiyXvfw6J11Iq4TBXVg/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend</a>
+
             <br/>
             <br/>
 
         
         </ul>
 
-         <h2>Day 3</h2>
+         <h2 id="day-three-seminars">Day 3</h2>
         <ul>
 
         <li><strong>Improved Mechanical Behavior of Solidified Soft Clay </strong><br/>
@@ -316,7 +316,7 @@ permalink: /session/
             Prof. Vishwa Nath Khan<br/>
             IOE, Tribuvan University<br/>
             </li>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd97spmpY9hNhtjSqUzNIt-WTfiGc8ajj0c49QOwQ6rJ-kjbg/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend</a>
+
             <br/>
             <br/>
 
@@ -329,7 +329,7 @@ permalink: /session/
             Atit Lal Shrestha<br/>
             CEO, Merolagani<br/>
             </li>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSfubbjBSBm4jlk0IvsfbAulWSIQ1KerWnMo7PERdnJUsyoGaA/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend</a>
+
             <br/>
             <br/>
 
@@ -341,14 +341,14 @@ permalink: /session/
             Researcher Honored by Young Scientist Award 2076(NAST)<br/>
             CEO - Interdisciplinary Research Institute for Sustainability(IRIS)
             </li>
-            <a href="https://docs.google.com/forms/d/e/1FAIpQLSf1XVep2d1sUB7yFyfQaLuOMWM1ZKFkQxF7qXkDJ1D6QldKTQ/viewform?usp=sf_link" class="c-button c-button--margin c-button--gradient u-type-menu-text c-link--outbound" target="_blank">Attend</a>
+
             <br/>
             <br/>
 
             </ul>
 
 
-            <h2>Day 3</h2>
+            <h2 id="day-three-tech-talks">Day 3</h2>
         <ul>
 
         <li><strong>Open Source Development</strong><br/>
