--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ layout: base
 <div class="t-light">
         <div class="o-bleed o-bg">
           <div class="o-full">
-            <h1 class="u-type-hero u-mb0">Brewing <br />innovative minds.</h1>
+            <h1 class="u-type-hero u-mb0">Farewell, <br />NEXT 2019.</h1>
             <h2 class="u-type-hero-subline u-mt1 u-ptp5 editable">
               July 18&ndash;20, 2019 @ NCIT<br />
               Shrawan 2&ndash;4, 2076. Balkumari, Lalitpur
@@ -23,7 +23,7 @@ layout: base
           </div>
           <div class="o-half o-half--padded o-half--hero-stacked">
             <p class="editable u-type-panel-text u-m0">
-              Witness the fusion of creativity, imagination, and innovation. <br /><a href="https://youtu.be/7HfBsUXnUr4" class="c-link c-link--outbound u-type-panel-text u-m0">Watch on YouTube</a>
+              That's a wrap, NEXT 2019. Thank you to everyone who attended the event and made it possible. See you next year!<br /><a href="https://youtu.be/7HfBsUXnUr4" class="c-link c-link--outbound u-type-panel-text u-m0">Watch on YouTube</a>
             </p>
           </div>
         </div>
